# VectorLog-Engine

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
dashboards/: vectorlog_security.json
reports/: rapport_tp5.tex
sql/: schema.sql
src/vectorlog/: __init__.py  alert.py  analytics.py  anomaly.py  api.py  cli.py  config.py  db.py  embeddings.py  opensearch.py  parsers.py  search.py  spark_pipeline.py  text.py  threat_intel.py  web_app.py
tests/: test_cli.py  test_parsers.py  test_text.py  test_threat_intel.py
